# rick-advanture

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl  README.md
include/: Makefile  cmake_install.cmake
src/: bullet.cpp1  camera.cpp  elements.cpp  elements.h  global_var.cpp  global_var.h  main.cpp  main.cpp1  main1.cpp  objects.cpp  objects.h  person.cpp  person.h  physics.cpp  physics.h  rlights.h
src/assets/: cube.glb  plane.glb  video.mp4.iqm
src/assets/gltf/: untitled.gltf  untitled.mtl
src/assets/player/: player.glb  player.gltf
src/script/: config.lua  script.cpp  script.h
src/shaders/: phong.fs  phong.vs
